变更了如何定义 TransactionManager 资源的方法，并添加了定义 TransactionSynchronizationRegistry 资源的方法。

--- a/HowToDeployBtmToTomcat7.wiki
+++ b/HowToDeployBtmToTomcat7.wiki
@@ -66,8 +66,12 @@
     <Transaction factory="bitronix.tm.BitronixUserTransactionObjectFactory" />
         
     <Resource name="TransactionManager" auth="Container"
-    	type="javax.transaction.TransactionManager"
-    	factory="bitronix.tm.BitronixUserTransactionObjectFactory" />
+        type="javax.transaction.TransactionManager"
+        factory="bitronix.tm.BitronixTransactionManagerObjectFactory" />
+        
+    <Resource name="TransactionSynchronizationRegistry" auth="Container"
+        type="javax.transaction.TransactionSynchronizationRegistry"
+        factory="bitronix.tm.BitronixTransactionSynchronizationRegistryObjectFactory" />
 
  </Context>
  }}}
